# blesync

./: .gitignore  Cargo.toml  README.md
central/macos_ble_central/: Cargo.toml
central/macos_ble_central/src/: ble_central.rs  error.rs  lib.rs  main.rs
peripheral/android_ble_peripheral/: settings.gradle.kts
peripheral/android_ble_peripheral/app/: build.gradle.kts
peripheral/android_ble_peripheral/app/src/androidTest/java/io/oliverj/android_ble_peripheral/: ExampleInstrumentedTest.kt
peripheral/android_ble_peripheral/app/src/main/: AndroidManifest.xml
peripheral/android_ble_peripheral/app/src/main/java/io/oliverj/android_ble_peripheral/: MainActivity.kt
peripheral/android_ble_peripheral/app/src/main/java/io/oliverj/android_ble_peripheral/ui/theme/: Color.kt  Theme.kt  Type.kt
peripheral/android_ble_peripheral/app/src/main/res/values/: strings.xml  themes.xml
peripheral/android_ble_peripheral/app/src/test/java/io/oliverj/android_ble_peripheral/: ExampleUnitTest.kt
peripheral/android_ble_peripheral/gradle/wrapper/: gradle-wrapper.properties
