[package]
name = "macos_ble_central"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = { version = "0.10", default-features = false, features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0"
futures    = "0.3"

uuid = { version = "1", features = ["v4"] }
