[package]
name = "blesync"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug    = { version = "0.10", default-features = false, features = ["serde"] }
tokio       = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
serde_json  = "1.0"
futures     = "0.3"
log         = "0.4"
thiserror   = "1.0"
tracing     = "0.1"
tracing-subscriber = {version = "0.3", features = ["fmt", "env-filter"]}
uuid = { version = "1", features = ["v4"] }
