[package]
name = "blesync"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug    = { version = "0.11.8", default-features = false, features = ["serde"] }
tokio       = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
serde_json  = "1.0.140"
futures     = "0.3.31"
log         = "0.4.27"
thiserror   = "2.0.12"
tracing     = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["fmt", "env-filter"]}
uuid = { version = "1.17.0", features = ["v4"] }
